test/runnable/funcptrtest.nt
module funcptrtest;

macro import std.macro.assert;

void main() {
    assert(callFp(&returnFive) == 5);
}

int callFp(int function() fn) { return fn(); }

int returnFive() { return 5; }
