test/fail_compilation/afl_3.nt
module afl_3;

void main() {
    &x;
}
